2004-07-30  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/file_selector.c: (gcompris_file_selector_stop),
	(display_file_selector), (item_event_directory),
	(entry_enter_callback): added grab on the entry to have it behave correctly.
	unstable code. the gcompris_file_selector_stop fails randomly on 
	gtk_object_destroy(GTK_OBJECT(rootitem)); don't know why yet.

2004-07-30  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/draw.c: (display_tool_selector): improved, not yet complete.
	* boards/skins/default/button_load.png: created with image from http://www.openclipart.org in public domain
	* boards/skins/default/button_save.png: created with image from http://www.openclipart.org in public domain
	
2004-07-29  Bruno coudoin  <bruno.coudoin@free.fr>

	* po/POTFILES.in: removed uneeded boards/geography/board5_0.xml.in
	* src/boards/py-mod-gcompris.c: (pyFileSelectorCallBack): fised pyFileSelectorCallBackFunc ref (by Yves)
	* src/boards/python/anim.py: latest version from Yves. added many tools like text.
	* src/gcompris/file_selector.c: (display_file_selector),
	(display_files), (item_event_file_selector): improved a little bit. still incomplete.

2004-07-17  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/python/anim.py: updated by Yves Combe. Loading svg can now be completed.

2004-07-16  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/gcompris/file_selector.c: (gcompris_file_selector_save),
	(gcompris_file_selector_load), (gcompris_file_selector_stop),
	(display_file_selector), (create_rootdir), (display_files),
	(item_event_directory), (item_event_file_selector): implemented save/load windows.
	now create the root directory if not present.
	* src/gcompris/svgutil.c: (gcompris_pixbuf_to_svg_file):  updated by Yves Combe
	* src/gcompris/svgutil.h: added prototype

2004-07-15  Bruno coudoin  <bruno.coudoin@free.fr>

	* po/POTFILES.in: added missing files
	* src/boards/py-mod-utils.c:  updated by Yves Combe